# vibewindow

./: .env.example  .gitignore  AGENTS-back.md  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  dist-workspace.toml  install  rustfmt.toml
crates/vw-acp/: Cargo.toml  LICENSE  plan.md  readmd.md
crates/vw-acp/src/: acp_error_shapes.rs  acp_error_shapes_tests.rs  acp_jsonrpc.rs  acp_jsonrpc_tests.rs  agent_registry.rs  agent_registry_tests.rs  agent_session_id.rs  agent_session_id_tests.rs  cli_core.rs  cli_core_tests.rs  cli_public.rs  cli_public_tests.rs  client.rs  client_tests.rs  codex_compat.rs  codex_compat_tests.rs  config.rs  config_tests.rs  error.rs  error_normalization.rs  error_normalization_tests.rs  error_tests.rs  errors.rs  errors_tests.rs  filesystem.rs  filesystem_tests.rs  jsonrpc_error.rs  jsonrpc_error_tests.rs  lib.rs  main.rs  main_tests.rs  mcp_servers.rs  mcp_servers_tests.rs  output.rs  output_json_formatter.rs  output_json_formatter_tests.rs  output_tests.rs  perf_metrics.rs  perf_metrics_capture.rs  perf_metrics_capture_tests.rs  (+50 more)
crates/vw-acp/src/cli/: config_command.rs  config_command_tests.rs  flags.rs  flags_tests.rs  json_output.rs  json_output_tests.rs  mod.rs  output_render.rs  output_render_tests.rs  status_command.rs  status_command_tests.rs
crates/vw-acp/src/client/: active_prompt.rs  active_prompt_tests.rs  actor.rs  actor_handle.rs  actor_handle_tests.rs  actor_tests.rs  auth.rs  auth_env.rs  auth_env_tests.rs  auth_tests.rs  builder.rs  builder_tests.rs  client_error.rs  client_error_tests.rs  commands.rs  commands_tests.rs  error_context.rs  error_context_tests.rs  event_client.rs  event_client_tests.rs  helpers.rs  helpers_tests.rs  lifecycle.rs  lifecycle_tests.rs  message_io.rs  message_io_tests.rs  process.rs  process_signals.rs  process_signals_tests.rs  process_tests.rs  prompt_loop.rs  prompt_loop_tests.rs  prompt_mapping.rs  prompt_mapping_tests.rs  protocol.rs  protocol_tests.rs  runtime.rs  runtime_tests.rs  session_control.rs  session_control_tests.rs  (+5 more)
crates/vw-acp/src/session_persistence/: index.rs  index_tests.rs  mod.rs  parse.rs  parse_tests.rs  repository.rs  repository_tests.rs  serialize.rs  serialize_tests.rs  tests.rs
crates/vw-acp/src/session_runtime/: connect_load.rs  connect_load_tests.rs  lifecycle.rs  lifecycle_tests.rs  prompt_runner.rs  prompt_runner_tests.rs  queue_owner_process.rs  queue_owner_process_tests.rs
crates/vw-acp/tests/: acp_error_shapes.rs  acp_jsonrpc.rs  agent_registry.rs  agent_session_id.rs  cli_core.rs  cli_flags.rs  cli_public.rs  codex_compat.rs  config.rs  error_normalization.rs  errors.rs  filesystem.rs  mcp_servers.rs  opencode_resolution.rs  output.rs  output_json_formatter.rs  perf_metrics.rs  permissions.rs  persisted_key_policy.rs  port_helpers.rs  prompt_content.rs  queue_ipc.rs  queue_lease_store.rs  queue_owner_turn_controller.rs  queue_paths.rs  session_conversation_model.rs  session_mode_preference.rs  session_persistence.rs  session_runtime_helpers.rs  spawn_command_options.rs  types.rs  version.rs
crates/vw-agent/: Cargo.toml  readmd.md
crates/vw-agent/assets/skills/: README.md
crates/vw-agent/memory/: brain.db
crates/vw-agent/src/: app.rs  app_tests.rs  cli_commands.rs  cli_commands_tests.rs  lib.rs  mod.rs  rag.rs  test_capabilities.rs  test_capabilities_tests.rs  tests.rs  update.rs
crates/vw-agent/src/agent/: generate.txt  loop_.rs  memory_loader.rs  mod.rs  (+2 more)
crates/vw-agent/state/: memory_hygiene_state.json
crates/vw-agent/tests/: shell_attack_vectors.rs  shell_integration.rs
crates/vw-api-types/: Cargo.toml
crates/vw-api-types/src/: chat.rs  chat_tests.rs  cleaner.rs  cleaner_tests.rs  common.rs  common_tests.rs  data.rs  data_tests.rs  error.rs  error_tests.rs  file.rs  file_tests.rs  git.rs  git_tests.rs  id.rs  id_tests.rs  knowledge.rs  knowledge_tests.rs  lib.rs  project.rs  project_tests.rs  provider.rs  provider_tests.rs  question.rs  question_tests.rs  session.rs  session_tests.rs  settings.rs  settings_tests.rs  task.rs  task_tests.rs  todo.rs  todo_tests.rs  tool.rs  tool_tests.rs  tools.rs  tools_tests.rs  workflow.rs  workflow_tests.rs  worktree.rs  (+1 more)
crates/vw-cli/: Cargo.toml
crates/vw-cli/src/: cli.rs  cli_tests.rs  lib.rs  main.rs  main_tests.rs  tests.rs
crates/vw-config-types/: Cargo.toml
crates/vw-config-types/src/: agent.rs  agent_tests.rs  automation.rs  automation_tests.rs  config.rs  config_tests.rs  gateway.rs  gateway_tests.rs  hooks.rs  hooks_tests.rs  lib.rs  memory.rs  memory_tests.rs  observability.rs  observability_tests.rs  paths.rs  provider.rs  provider_tests.rs  proxy.rs  proxy_tests.rs  reliability.rs  reliability_tests.rs  routing.rs  routing_tests.rs  runtime.rs  runtime_tests.rs  security.rs  security_tests.rs  skills.rs  skills_tests.rs  tools.rs  tools_tests.rs  transcription.rs  transcription_tests.rs  ui.rs  ui_tests.rs
crates/vw-desktop/: Cargo.toml  build.rs  index.html
crates/vw-desktop/src/: fonts.rs  fonts_tests.rs  lib.rs  main.rs
crates/vw-figma-json/: Cargo.toml
crates/vw-figma-json/src/: error.rs  lib.rs  main.rs  tests.rs  types.rs  types_tests.rs
crates/vw-gateway-client/: Cargo.toml
crates/vw-gateway-client/src/: endpoint.rs  http.rs  http_tests.rs  lib.rs  session.rs  stream.rs  stream_tests.rs  tests.rs
crates/vw-provider-resolver/: Cargo.toml
crates/vw-provider-resolver/src/: auth.rs  auth_tests.rs  cache.rs  cache_tests.rs  config.rs  config_tests.rs  error.rs  error_tests.rs  flag.rs  flag_tests.rs  global.rs  global_tests.rs  installation.rs  installation_tests.rs  lib.rs  models.rs  models_tests.rs  provider.rs  provider_tests.rs
crates/vw-shared/: Cargo.toml
crates/vw-shared/src/: json.rs  json_tests.rs  lib.rs  permission.rs  project.rs  question.rs  question_tests.rs  snapshot.rs  snapshot_tests.rs  time.rs  time_tests.rs  todo.rs  todo_tests.rs  update.rs  update_tests.rs  util.rs  util_tests.rs
crates/vw-shared/tests/: provider_models_json.rs
crates/vw-webview/: Cargo.toml
crates/vw-webview/src/: main.rs  main_tests.rs
(+5518 files in other folders)
