[workspace]
members = [
  ".",
  "crates/vw-api-types",
  "crates/vw-acp",
  "crates/vw-config-types",
  "crates/vw-gateway-client",
  "crates/vw-shared",
  "crates/vw-agent",
  "crates/vw-cli",
  "crates/vw-desktop",
  "crates/vw-figma-json",
  "crates/vw-webview",
  "crates/vw-provider-resolver",
]
resolver = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
