[package]
name = "vw-acp"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Agent Client Protocol bridge for VibeWindow"
license = "MIT"

[package.metadata.dist]
dist = true

[[bin]]
name = "acp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_usage", "unstable_session_resume", "unstable_session_model"] }
async-trait = "0.1.89"
libc = "0.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.18"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1"
vw-api-types = { path = "../vw-api-types", version = "0.2.2" }
vw-shared = { path = "../vw-shared", version = "0.2.2", features = ["shell-tokio"] }
