[package]
name = "vw-cli"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Rust-first autonomous agent runtime CLI"
license = "MIT"
default-run = "vibewindow"
autobins = false

[package.metadata.dist]
dist = true
npm-package = "vibewindow"
# Enable this when Homebrew publishing is enabled in dist-workspace.toml.
# formula = "vibewindow"

[[bin]]
name = "vibewindow"
path = "src/main.rs"

[[bin]]
name = "vibe-agent"
path = "src/bin/vibe-agent.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
dialoguer = "0.11"
libc = "0.2"
ratatui = "0.30.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "fmt", "ansi"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "logging", "std", "tls12"] }
unicode-width = "0.1"
vw-agent = { path = "../vw-agent", version = "0.2.2" }
vw-gateway-client = { path = "../vw-gateway-client", version = "0.2.2" }
vw-shared = { path = "../vw-shared", version = "0.2.2" }

[features]
default = []
