[package]
name = "vw-config-types"
version = "0.2.8"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Configuration types for VibeWindow"
license = "MIT"

[dependencies]
directories = "5"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
tracing = "0.1"
