[package]
name = "vw-desktop"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Desktop application for VibeWindow"
license = "MIT"
default-run = "vibe-window"
build = "build.rs"

[package.metadata.dist]
dist = true

[package.metadata.bundle]
name = "VibeWindow"
identifier = "com.vibewindow.vibewindow"
icon = ["../../assets/logo/icon.icns"]
resources = []

[package.metadata.bundle.bin.vibe-window]
name = "VibeWindow"
identifier = "com.vibewindow.vibewindow"
icon = ["../../assets/logo/icon.icns"]

[[bin]]
name = "vibe-window"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
glob = "0.3"
hex = "0.4"
html2md = "0.2.15"
iced = { version = "0.14", features = ["image", "svg", "advanced", "tokio", "highlighter", "markdown"] }
iced-code-editor = { version = "0.3.8", features = ["lsp-process"] }
iced_highlighter = "0.14"
image = "0.25.9"
include_dir = "0.7"
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
pulldown-cmark = "0.9"
qrcode = { version = "0.12", features = ["image"] }
qrcodegen = "1.8.0"
regex = "1"
rand = "0.8.6"
resvg = "0.46.0"
rfd = "0.14"
rusqlite = "0.37.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2"
strsim = "0.10"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tiny-skia = "0.11.4"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "fmt", "ansi"] }
ttf-parser = "0.20"
unicode-width = "0.1"
urlencoding = "2.1"
walkdir = "2"
web-time = "1.1.0"
vw-provider-resolver = { path = "../vw-provider-resolver", version = "0.2.5" }
vw-config-types = { path = "../vw-config-types", version = "0.2.5" }
vw-gateway-client = { path = "../vw-gateway-client", version = "0.2.5" }
vw-shared = { path = "../vw-shared", version = "0.2.5" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4"
git2 = { version = "0.20.4", default-features = false, features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
iced_term = "0.7"
open = "5"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "socks", "blocking", "json", "rustls-tls-webpki-roots"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
vw-figma-json = { package = "vw-fig2json", path = "../vw-figma-json", version = "0.2.5" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }

[features]
default = []

[build-dependencies]
serde_json = "1"
