[package]
name = "vw-fig2json"
version = "0.2.7"
edition = "2024"
authors = ["kreako <olivier@kreako.fr>"]
description = "Figma .fig parser and JSON converter"
license = "MIT"
repository = "https://github.com/hunzhiwange/vibewindow"
readme = "README.md"
keywords = ["figma", "converter", "json", "llm"]
categories = ["encoding"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ZIP archive handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Compression
flate2 = "1.0"
zstd = "0.13"

# Kiwi schema decoding
kiwi-schema = "0.2.1"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for blobs
base64 = "0.21"

[lints.clippy]
all = "deny"
