[package]
name = "vw-gateway-client"
version = "0.2.1"
edition = "2024"
publish = false

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
vw-api-types = { path = "../vw-api-types" }
vw-shared = { path = "../vw-shared" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
