[package]
name = "vw-provider-resolver"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Provider and model resolver for VibeWindow"
license = "MIT"

[dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
strsim = "0.10"
directories = "5"
vw-shared = { path = "../vw-shared", version = "0.2.5" }
vw-config-types = { path = "../vw-config-types", version = "0.2.5" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
vw-gateway-client = { path = "../vw-gateway-client", version = "0.2.5" }
web-sys = { version = "0.3", features = ["Window", "Location"] }
