[package]
name = "vw-shared"
version = "0.2.3"
edition = "2024"
repository = "https://github.com/hunzhiwange/vibewindow"
homepage = "https://github.com/hunzhiwange/vibewindow"
description = "Shared utilities for VibeWindow crates"
license = "MIT"

[dependencies]
anyhow = "1"
getrandom = { version = "0.2", features = ["js"] }
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = ["process"], optional = true }
web-time = "1.1.0"

[features]
shell-tokio = ["dep:tokio"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "windows")))'.dependencies]
rusqlite = "0.37.0"
